tdf#116821 Keep row/column buttons enabled even when insert impossible

So other commands included in these buttons (like delete or set height/
width), could still be used.

Change-Id: If9e96116aebf73b2d20fb8d63ee67da3d17e3d9f
Reviewed-on: https://gerrit.libreoffice.org/52909
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>