sc/source/ui/view/cellsh.cxx
@@ -245,7 +245,6 @@ void ScCellShell::GetBlockState( SfxItemSet& rSet )
                 break;
             }
             case FID_INS_CELLSDOWN:
-            case SID_ROW_OPERATIONS:
                 bDisable = (!bSimpleArea) || GetViewData()->SimpleColMarked();
                 break;
 
@@ -266,7 +265,6 @@ void ScCellShell::GetBlockState( SfxItemSet& rSet )
                 break;
             }
             case FID_INS_CELLSRIGHT:
-            case SID_COLUMN_OPERATIONS:
                 bDisable = (!bSimpleArea) || GetViewData()->SimpleRowMarked();
                 break;
 
